--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
   "devDependencies": {
     "coveralls": "^3.0.2",
     "jest": "^21.2.1"
+  },
+  "dependencies": {
+    "argparse": "^1.0.10"
   }
 }
